name:                xml-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hilcode/xml-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Hilco Wijbenga
maintainer:          hilco.wijbenga@gmail.com
copyright:           Hilco Wijbenga
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
  default-language:    Haskell2010

executable xml-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xml-parser
  default-language:    Haskell2010

test-suite xml-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xml-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hilcode/xml-parser
